<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-2dp">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button7"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="200dp"
                android:text="@string/setup_branch"
                android:textSize="10sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/update_branch"
                android:textSize="10sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/chage_ui_settings"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="1dp"
            android:id="@+id/setting_left_panel_11"
            android:layout_width="350dp"
            android:layout_height="800dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button10"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="200dp"
                android:text="@string/upload_daily_report"
                android:textSize="10sp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/search_contact"
                android:textSize="10sp" />

            <Button
                android:id="@+id/submit_orders_to_remote_server_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/submit_orders_to_remote_server"
                android:textSize="10sp" />

            <Button
                android:id="@+id/retrieve_orders_from_remote_server_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/retrieve_orders_from_remote_server"
                android:textSize="8sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="298dp"
        android:layout_height="49dp"
        android:layout_marginTop="140dp"
        android:text="@string/stamford_pos_setting"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>