<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CommandCenter"
    android:orientation="horizontal"
    >

    <Button
        android:id="@+id/onclick_stopbtn"
        android:layout_width="198dp"
        android:layout_height="63dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="484dp"
        android:onClick="onclick_stopbtn"
        android:text="@string/stop_music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/onclick_playbtn"
        android:layout_width="200dp"
        android:layout_height="61dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="408dp"
        android:onClick="onclick_playbtn"
        android:text="@string/play_music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_add_product"
        android:layout_width="234dp"
        android:layout_height="67dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="312dp"
        android:text="@string/add_product"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_new_order"
        android:layout_width="238dp"
        android:layout_height="64dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="212dp"
        android:text="@string/new_order"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="356dp"
        android:layout_height="62dp"
        android:layout_marginTop="120dp"
        android:text="@string/command_center"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>